@@ -23,7 +23,6 @@ import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineHashMap;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Map;
 
 import static org.apache.kafka.metadata.Replicas.NONE;
@@ -141,11 +140,10 @@ public class BrokersToElrs {
             }
         } else {
             int[] newPartitions = new int[partitions.length - 1];
-            int j = 0;
-            for (int i = 0; i < partitions.length; i++) {
-                int partition = partitions[i];
+            int i = 0;
+            for (int partition : partitions) {
                 if (partition != removedPartition) {
-                    newPartitions[j++] = partition;
+                    newPartitions[i++] = partition;
                 }
             }
             topicMap.put(topicId, newPartitions);
@@ -155,7 +153,7 @@ public class BrokersToElrs {
     BrokersToIsrs.PartitionsOnReplicaIterator partitionsWithBrokerInElr(int brokerId) {
         Map<Uuid, int[]> topicMap = elrMembers.get(brokerId);
         if (topicMap == null) {
-            topicMap = Collections.emptyMap();
+            topicMap = Map.of();
         }
         return new BrokersToIsrs.PartitionsOnReplicaIterator(topicMap, false);
     }
