@@ -18,7 +18,6 @@
 package org.apache.kafka.controller;
 
 import org.apache.kafka.common.config.ConfigDef;
-import org.apache.kafka.common.config.internals.QuotaConfigs;
 import org.apache.kafka.common.errors.InvalidRequestException;
 import org.apache.kafka.common.metadata.ClientQuotaRecord;
 import org.apache.kafka.common.metadata.ClientQuotaRecord.EntityData;
@@ -28,16 +27,17 @@ import org.apache.kafka.common.quota.ClientQuotaEntity;
 import org.apache.kafka.common.requests.ApiError;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.config.QuotaConfig;
 import org.apache.kafka.server.mutable.BoundedList;
 import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineHashMap;
+
 import org.slf4j.Logger;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -139,7 +139,7 @@ public class ClientQuotaControlManager {
         }
         if (record.remove()) {
             quotas.remove(record.key());
-            if (quotas.size() == 0) {
+            if (quotas.isEmpty()) {
                 clientQuotaData.remove(entity);
             }
             log.info("Replayed ClientQuotaRecord for {} removing {}.", entity, record.key());
@@ -181,7 +181,7 @@ public class ClientQuotaControlManager {
 
         List<ApiMessageAndVersion> newRecords = new ArrayList<>(newQuotaConfigs.size());
         Map<String, Double> currentQuotas = clientQuotaData.containsKey(entity) ?
-                clientQuotaData.get(entity) : Collections.emptyMap();
+                clientQuotaData.get(entity) : Map.of();
         for (Map.Entry<String, Double> entry : newQuotaConfigs.entrySet()) {
             String key = entry.getKey();
             Double newValue = entry.getValue();
@@ -231,13 +231,13 @@ public class ClientQuotaControlManager {
                     "not be combined with User or ClientId");
             } else {
                 if (isValidIpEntity(entity.get(ClientQuotaEntity.IP))) {
-                    configKeys = QuotaConfigs.ipConfigs().configKeys();
+                    configKeys = QuotaConfig.ipConfigs().configKeys();
                 } else {
                     return new ApiError(Errors.INVALID_REQUEST, entity.get(ClientQuotaEntity.IP) + " is not a valid IP or resolvable host.");
                 }
             }
         } else if (hasUser || hasClientId) {
-            configKeys = QuotaConfigs.userAndClientQuotaConfigs().configKeys();
+            configKeys = QuotaConfig.userAndClientQuotaConfigs().configKeys();
         } else {
             return new ApiError(Errors.INVALID_REQUEST, "Invalid empty client quota entity");
         }
@@ -308,7 +308,7 @@ public class ClientQuotaControlManager {
     }
 
     private ApiError validateEntity(ClientQuotaEntity entity, Map<String, String> validatedEntityMap) {
-        // Given a quota entity (which is a mapping of entity type to entity name), validate it's types
+        // Given a quota entity (which is a mapping of entity type to entity name), validate its types
         if (entity.entries().isEmpty()) {
             return new ApiError(Errors.INVALID_REQUEST, "Invalid empty client quota entity");
         }
