@@ -17,17 +17,6 @@
 
 package org.apache.kafka.controller;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.IntPredicate;
-import java.util.stream.Collectors;
-
 import org.apache.kafka.common.DirectoryId;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.AlterPartitionRequestData.BrokerState;
@@ -38,8 +27,20 @@ import org.apache.kafka.metadata.Replicas;
 import org.apache.kafka.metadata.placement.DefaultDirProvider;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 import org.apache.kafka.server.common.MetadataVersion;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.IntPredicate;
+import java.util.stream.Collectors;
+
 import static org.apache.kafka.metadata.LeaderConstants.NO_LEADER;
 import static org.apache.kafka.metadata.LeaderConstants.NO_LEADER_CHANGE;
 
@@ -58,8 +59,7 @@ public class PartitionChangeBuilder {
         if (record.removingReplicas() != null) return false;
         if (record.addingReplicas() != null) return false;
         if (record.leaderRecoveryState() != LeaderRecoveryState.NO_CHANGE) return false;
-        if (record.directories() != null) return false;
-        return true;
+        return record.directories() == null;
     }
 
     /**
@@ -96,7 +96,6 @@ public class PartitionChangeBuilder {
     private List<Integer> uncleanShutdownReplicas;
     private Election election = Election.ONLINE;
     private LeaderRecoveryState targetLeaderRecoveryState;
-    private boolean zkMigrationEnabled;
     private boolean eligibleLeaderReplicasEnabled;
     private DefaultDirProvider defaultDirProvider;
 
@@ -117,7 +116,6 @@ public class PartitionChangeBuilder {
         this.partitionId = partitionId;
         this.isAcceptableLeader = isAcceptableLeader;
         this.metadataVersion = metadataVersion;
-        this.zkMigrationEnabled = false;
         this.eligibleLeaderReplicasEnabled = false;
         this.minISR = minISR;
 
@@ -143,7 +141,7 @@ public class PartitionChangeBuilder {
         return setTargetIsr(
             targetIsrWithEpoch
               .stream()
-              .map(brokerState -> brokerState.brokerId())
+              .map(BrokerState::brokerId)
               .collect(Collectors.toList())
         );
     }
@@ -178,11 +176,6 @@ public class PartitionChangeBuilder {
         return this;
     }
 
-    public PartitionChangeBuilder setZkMigrationEnabled(boolean zkMigrationEnabled) {
-        this.zkMigrationEnabled = zkMigrationEnabled;
-        return this;
-    }
-
     public PartitionChangeBuilder setEligibleLeaderReplicasEnabled(boolean eligibleLeaderReplicasEnabled) {
         this.eligibleLeaderReplicasEnabled = eligibleLeaderReplicasEnabled;
         return this;
@@ -212,6 +205,10 @@ public class PartitionChangeBuilder {
             this.node = node;
             this.unclean = unclean;
         }
+    }
+
+    public List<Integer> targetIsr() {
+        return targetIsr;
     }
 
     // VisibleForTesting
@@ -280,7 +277,7 @@ public class PartitionChangeBuilder {
         if (election == Election.UNCLEAN) {
             // Attempt unclean leader election
             Optional<Integer> uncleanLeader = targetReplicas.stream()
-                .filter(replica -> isAcceptableLeader.test(replica))
+                .filter(isAcceptableLeader::test)
                 .findFirst();
             if (uncleanLeader.isPresent()) {
                 return new ElectionResult(uncleanLeader.get(), true);
@@ -292,14 +289,13 @@ public class PartitionChangeBuilder {
 
     private boolean canElectLastKnownLeader() {
         if (!eligibleLeaderReplicasEnabled || !useLastKnownLeaderInBalancedRecovery) {
-            log.trace("Try to elect last known leader for " + topicId + "-" + partitionId +
-                " but elrEnabled=" + eligibleLeaderReplicasEnabled + ", useLastKnownLeaderInBalancedRecovery=" +
-                useLastKnownLeaderInBalancedRecovery);
+            log.trace("Try to elect last known leader for {}-{} but elrEnabled={}, useLastKnownLeaderInBalancedRecovery={}",
+                    topicId, partitionId, eligibleLeaderReplicasEnabled, useLastKnownLeaderInBalancedRecovery);
             return false;
         }
         if (!targetElr.isEmpty() || !targetIsr.isEmpty()) {
-            log.trace("Try to elect last known leader for " + topicId + "-" + partitionId +
-                " but ELR/ISR is not empty. ISR=" + targetIsr + ", ELR=" + targetElr);
+            log.trace("Try to elect last known leader for {}-{} but ELR/ISR is not empty. ISR={}, ELR={}",
+                    topicId, partitionId, targetIsr, targetElr);
             return false;
         }
 
@@ -311,14 +307,13 @@ public class PartitionChangeBuilder {
         //    in the field even if useLastKnownLeaderInBalancedRecovery is set to true again. In this case, we can't
         //    refer to the lastKnownElr.
         if (partition.lastKnownElr.length != 1) {
-            log.trace("Try to elect last known leader for " + topicId + "-" + partitionId +
-                " but lastKnownElr does not only have 1 member. lastKnownElr=" +
-                Arrays.toString(partition.lastKnownElr));
+            log.trace("Try to elect last known leader for {}-{} but lastKnownElr does not only have 1 member. lastKnownElr={}",
+                    topicId, partitionId, Arrays.toString(partition.lastKnownElr));
             return false;
         }
         if (isAcceptableLeader.test(partition.lastKnownElr[0])) {
-            log.trace("Try to elect last known leader for " + topicId + "-" + partitionId +
-                " but last known leader is not alive. last known leader=" + partition.lastKnownElr[0]);
+            log.trace("Try to elect last known leader for {}-{} but last known leader is not alive. last known leader={}",
+                    topicId, partitionId, partition.lastKnownElr[0]);
         }
         return true;
     }
@@ -336,7 +331,7 @@ public class PartitionChangeBuilder {
             // so only log clean elections at TRACE level; log unclean elections at INFO level
             // to ensure the message is emitted since an unclean election can lead to data loss;
             if (targetElr.contains(electionResult.node)) {
-                targetIsr = Collections.singletonList(electionResult.node);
+                targetIsr = List.of(electionResult.node);
                 targetElr = targetElr.stream().filter(replica -> replica != electionResult.node)
                     .collect(Collectors.toList());
                 log.trace("Setting new leader for topicId {}, partition {} to {} using ELR",
@@ -352,9 +347,8 @@ public class PartitionChangeBuilder {
             if (electionResult.unclean) {
                 // If the election was unclean, we have to forcibly set the ISR to just the
                 // new leader. This can result in data loss!
-                record.setIsr(Collections.singletonList(electionResult.node));
-                if (partition.leaderRecoveryState != LeaderRecoveryState.RECOVERING &&
-                    metadataVersion.isLeaderRecoverySupported()) {
+                record.setIsr(List.of(electionResult.node));
+                if (partition.leaderRecoveryState != LeaderRecoveryState.RECOVERING) {
                     // And mark the leader recovery state as RECOVERING
                     record.setLeaderRecoveryState(LeaderRecoveryState.RECOVERING.value());
                 }
@@ -365,41 +359,49 @@ public class PartitionChangeBuilder {
     }
 
     /**
-     * Trigger a leader epoch bump if one is needed.
+     * Trigger a leader epoch bump if one is needed because of replica reassignment.
      *
-     * We need to bump the leader epoch if:
-     * 1. The leader changed, or
-     * 2. The new replica list does not contain all the nodes that the old replica list did.
-     *
-     * Changes that do NOT fall in any of these categories will increase the partition epoch, but
-     * not the leader epoch. Note that if the leader epoch increases, the partition epoch will
-     * always increase as well; there is no case where the partition epoch increases more slowly
-     * than the leader epoch.
-     *
-     * If the PartitionChangeRecord sets the leader field to something other than
-     * NO_LEADER_CHANGE, a leader epoch bump will automatically occur. That takes care of
-     * case 1. In this function, we check for cases 2 and 3, and handle them by manually
-     * setting record.leader to the current leader.
-     *
-     * In MV before 3.6 there was a bug (KAFKA-15021) in the brokers' replica manager
-     * that required that the leader epoch be bump whenever the ISR shrank. In MV 3.6 this leader
-     * bump is not required when the ISR shrinks. Note, that the leader epoch is never increased if
-     * the ISR expanded.
-     *
-     * In MV 3.6 and beyond, if the controller is in ZK migration mode, the leader epoch must
-     * be bumped during ISR shrink for compatability with ZK brokers.
+     * Note that if the leader epoch increases, the partition epoch will always increase as well; there is no
+     * case where the partition epoch increases more slowly than the leader epoch.
      */
-    void triggerLeaderEpochBumpIfNeeded(PartitionChangeRecord record) {
-        if (record.leader() == NO_LEADER_CHANGE) {
-            boolean bumpLeaderEpochOnIsrShrink = metadataVersion.isLeaderEpochBumpRequiredOnIsrShrink() || zkMigrationEnabled;
+    void triggerLeaderEpochBumpForReplicaReassignmentIfNeeded(PartitionChangeRecord record) {
+        if (record.leader() != NO_LEADER_CHANGE) {
+            // The leader is already changing, so there will already be a leader epoch bump.
+            return;
+        }
+        if (!Replicas.contains(targetReplicas, partition.replicas)) {
+            // If the new replica list does not contain all the brokers that the old one did,
+            // ensure that there will be a leader epoch bump by setting the leader field.
+            record.setLeader(partition.leader);
+        }
+    }
 
-            if (!Replicas.contains(targetReplicas, partition.replicas)) {
-                // Reassignment
-                record.setLeader(partition.leader);
-            } else if (bumpLeaderEpochOnIsrShrink && !Replicas.contains(targetIsr, partition.isr)) {
-                // ISR shrink
-                record.setLeader(partition.leader);
-            }
+    /**
+     * Trigger a leader epoch bump if one is needed because of an ISR shrink.
+     *
+     * Note that it's important to call this function only after we have set the ISR field in
+     * the PartitionChangeRecord.
+     */
+    void triggerLeaderEpochBumpForIsrShrinkIfNeeded(PartitionChangeRecord record) {
+        if (!metadataVersion.isLeaderEpochBumpRequiredOnIsrShrink()) {
+            // We only need to bump the leader epoch on an ISR shrink in older metadata versions
+            // before 3.6, where there was a bug (KAFKA-15021) in the broker replica manager that
+            // required that the leader epoch be bumped whenever the ISR shrank. (This was never
+            // necessary for EXPANSIONS, only SHRINKS.)
+            return;
+        }
+        if (record.leader() != NO_LEADER_CHANGE) {
+            // The leader is already changing, so there will already be a leader epoch bump.
+            return;
+        }
+        if (record.isr() == null) {
+            // The ISR is not changing.
+            return;
+        }
+        if (!Replicas.contains(record.isr(), partition.isr)) {
+            // If the new ISR list does not contain all the brokers that the old one did,
+            // ensure that there will be a leader epoch bump by setting the leader field.
+            record.setLeader(partition.leader);
         }
     }
 
@@ -412,7 +414,7 @@ public class PartitionChangeBuilder {
 
         Optional<PartitionReassignmentReplicas.CompletedReassignment> completedReassignmentOpt =
             reassignmentReplicas.maybeCompleteReassignment(targetIsr);
-        if (!completedReassignmentOpt.isPresent()) {
+        if (completedReassignmentOpt.isEmpty()) {
             return;
         }
 
@@ -420,8 +422,8 @@ public class PartitionChangeBuilder {
 
         targetIsr = completedReassignment.isr;
         targetReplicas = completedReassignment.replicas;
-        targetRemoving = Collections.emptyList();
-        targetAdding = Collections.emptyList();
+        targetRemoving = List.of();
+        targetAdding = List.of();
     }
 
     public Optional<ApiMessageAndVersion> build() {
@@ -435,7 +437,7 @@ public class PartitionChangeBuilder {
 
         tryElection(record);
 
-        triggerLeaderEpochBumpIfNeeded(record);
+        triggerLeaderEpochBumpForReplicaReassignmentIfNeeded(record);
 
         maybeUpdateRecordElr(record);
 
@@ -444,10 +446,12 @@ public class PartitionChangeBuilder {
             !targetIsr.equals(Replicas.toList(partition.isr))) {
             // Set the new ISR if it is different from the current ISR and unclean leader election didn't already set it.
             if (targetIsr.isEmpty()) {
-                log.debug("A partition will have an empty ISR. " + this);
+                log.debug("A partition will have an empty ISR. {}", this);
             }
             record.setIsr(targetIsr);
         }
+
+        triggerLeaderEpochBumpForIsrShrinkIfNeeded(record);
 
         maybeUpdateLastKnownLeader(record);
 
@@ -471,7 +475,7 @@ public class PartitionChangeBuilder {
                 for (int replica : targetReplicas) {
                     directories.add(this.targetDirectories.getOrDefault(replica, defaultDirProvider.defaultDir(replica)));
                 }
-                if (!directories.equals(Arrays.asList(partition.directories))) {
+                if (!directories.equals(List.of(partition.directories))) {
                     record.setDirectories(directories);
                 }
             }
@@ -492,11 +496,11 @@ public class PartitionChangeBuilder {
         if (record.isr() != null && record.isr().isEmpty() && (partition.lastKnownElr.length != 1 ||
             partition.lastKnownElr[0] != partition.leader)) {
             // Only update the last known leader when the first time the partition becomes leaderless.
-            record.setLastKnownElr(Arrays.asList(partition.leader));
+            record.setLastKnownElr(List.of(partition.leader));
         } else if ((record.leader() >= 0 || (partition.leader != NO_LEADER && record.leader() != NO_LEADER))
             && partition.lastKnownElr.length > 0) {
             // Clear the LastKnownElr field if the partition will have or continues to have a valid leader.
-            record.setLastKnownElr(Collections.emptyList());
+            record.setLastKnownElr(List.of());
         }
     }
 
@@ -506,8 +510,8 @@ public class PartitionChangeBuilder {
 
         // Clean the ELR related fields if it is an unclean election or ELR is disabled.
         if (!isCleanLeaderElection || !eligibleLeaderReplicasEnabled) {
-            targetElr = Collections.emptyList();
-            targetLastKnownElr = Collections.emptyList();
+            targetElr = List.of();
+            targetLastKnownElr = List.of();
         }
 
         if (!targetElr.equals(Replicas.toList(partition.elr))) {
@@ -535,8 +539,8 @@ public class PartitionChangeBuilder {
 
         // If the ISR is larger or equal to the min ISR, clear the ELR and LastKnownElr.
         if (targetIsr.size() >= minISR) {
-            targetElr = Collections.emptyList();
-            targetLastKnownElr = Collections.emptyList();
+            targetElr = List.of();
+            targetLastKnownElr = List.of();
             return;
         }
 
@@ -548,7 +552,7 @@ public class PartitionChangeBuilder {
         // To do that, we first union the current ISR and current elr, then filter out the target ISR and unclean shutdown
         // Replicas.
         Set<Integer> candidateSet = new HashSet<>(targetElr);
-        Arrays.stream(partition.isr).forEach(ii -> candidateSet.add(ii));
+        Arrays.stream(partition.isr).forEach(candidateSet::add);
         targetElr = candidateSet.stream()
             .filter(replica -> !targetIsrSet.contains(replica))
             .filter(replica -> uncleanShutdownReplicas == null || !uncleanShutdownReplicas.contains(replica))
@@ -556,7 +560,7 @@ public class PartitionChangeBuilder {
 
         // Calculate the new last known ELR. Includes any ISR members since the ISR size drops below min ISR.
         // In order to reduce the metadata usage, the last known ELR excludes the members in ELR and current ISR.
-        targetLastKnownElr.forEach(ii -> candidateSet.add(ii));
+        candidateSet.addAll(targetLastKnownElr);
         targetLastKnownElr = candidateSet.stream()
             .filter(replica -> !targetIsrSet.contains(replica))
             .filter(replica -> !targetElr.contains(replica))
