@@ -17,6 +17,9 @@
 
 package org.apache.kafka.metadata.placement;
 
+import org.apache.kafka.common.errors.InvalidReplicationFactorException;
+import org.apache.kafka.metadata.OptionalStringComparator;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -25,10 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
-
-import org.apache.kafka.common.errors.InvalidReplicationFactorException;
-import org.apache.kafka.metadata.OptionalStringComparator;
 
 
 /**
@@ -120,7 +119,7 @@ public class StripedReplicaPlacer implements ReplicaPlacer {
      * A list of brokers that we can iterate through.
      */
     static class BrokerList {
-        final static BrokerList EMPTY = new BrokerList();
+        static final BrokerList EMPTY = new BrokerList();
         private final List<Integer> brokers = new ArrayList<>(0);
 
         /**
@@ -181,7 +180,7 @@ public class StripedReplicaPlacer implements ReplicaPlacer {
          *                  returned in this epoch.
          */
         int next(int epoch) {
-            if (brokers.size() == 0) return -1;
+            if (brokers.isEmpty()) return -1;
             if (this.epoch != epoch) {
                 this.epoch = epoch;
                 this.index = 0;
@@ -438,7 +437,7 @@ public class StripedReplicaPlacer implements ReplicaPlacer {
             placements.add(rackList.place(placement.numReplicas()));
         }
         return new TopicAssignment(
-            placements.stream().map(replicas -> new PartitionAssignment(replicas, cluster)).collect(Collectors.toList())
+            placements.stream().map(replicas -> new PartitionAssignment(replicas, cluster)).toList()
         );
     }
 }
