@@ -21,14 +21,14 @@ import org.apache.kafka.common.metadata.FeatureLevelRecord;
 import org.apache.kafka.image.writer.ImageWriterOptions;
 import org.apache.kafka.image.writer.RecordListWriter;
 import org.apache.kafka.metadata.RecordTestUtils;
-import org.apache.kafka.metadata.migration.ZkMigrationState;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.EligibleLeaderReplicasVersion;
 import org.apache.kafka.server.common.MetadataVersion;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -41,19 +41,19 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @Timeout(value = 40)
 public class FeaturesImageTest {
-    public final static FeaturesImage IMAGE1;
-    public final static List<ApiMessageAndVersion> DELTA1_RECORDS;
-    final static FeaturesDelta DELTA1;
-    final static FeaturesImage IMAGE2;
-    final static List<ApiMessageAndVersion> DELTA2_RECORDS;
-    final static FeaturesDelta DELTA2;
-    final static FeaturesImage IMAGE3;
+    public static final FeaturesImage IMAGE1;
+    public static final List<ApiMessageAndVersion> DELTA1_RECORDS;
+    static final FeaturesDelta DELTA1;
+    static final FeaturesImage IMAGE2;
+    static final List<ApiMessageAndVersion> DELTA2_RECORDS;
+    static final FeaturesDelta DELTA2;
+    static final FeaturesImage IMAGE3;
 
     static {
         Map<String, Short> map1 = new HashMap<>();
         map1.put("foo", (short) 2);
         map1.put("bar", (short) 1);
-        IMAGE1 = new FeaturesImage(map1, MetadataVersion.latestTesting(), ZkMigrationState.NONE);
+        IMAGE1 = new FeaturesImage(map1, MetadataVersion.latestTesting());
 
         DELTA1_RECORDS = new ArrayList<>();
         // change feature level
@@ -75,7 +75,7 @@ public class FeaturesImageTest {
         Map<String, Short> map2 = new HashMap<>();
         map2.put("foo", (short) 3);
         map2.put("baz", (short) 8);
-        IMAGE2 = new FeaturesImage(map2, MetadataVersion.latestTesting(), ZkMigrationState.NONE);
+        IMAGE2 = new FeaturesImage(map2, MetadataVersion.latestTesting());
 
         DELTA2_RECORDS = new ArrayList<>();
         // remove all features
@@ -93,13 +93,19 @@ public class FeaturesImageTest {
         DELTA2 = new FeaturesDelta(IMAGE2);
         RecordTestUtils.replayAll(DELTA2, DELTA2_RECORDS);
 
-        Map<String, Short> map3 = Collections.singletonMap("bar", (short) 1);
-        IMAGE3 = new FeaturesImage(map3, MetadataVersion.latestTesting(), ZkMigrationState.NONE);
+        Map<String, Short> map3 = Map.of("bar", (short) 1);
+        IMAGE3 = new FeaturesImage(map3, MetadataVersion.latestTesting());
     }
 
     @Test
     public void testEmptyImageRoundTrip() {
-        testToImage(FeaturesImage.EMPTY);
+        var image = FeaturesImage.EMPTY;
+        var metadataVersion = MetadataVersion.MINIMUM_VERSION;
+        RecordListWriter writer = new RecordListWriter();
+        image.write(writer, new ImageWriterOptions.Builder(metadataVersion).build());
+        // A metadata version is required for writing, so the expected image is not actually empty
+        var expectedImage = new FeaturesImage(Map.of(), metadataVersion);
+        testToImage(expectedImage, writer.records());
     }
 
     @Test
@@ -153,18 +159,31 @@ public class FeaturesImageTest {
 
     private static List<ApiMessageAndVersion> getImageRecords(FeaturesImage image) {
         RecordListWriter writer = new RecordListWriter();
-        image.write(writer, new ImageWriterOptions.Builder().setMetadataVersion(image.metadataVersion()).build());
+        image.write(writer, new ImageWriterOptions.Builder(image.metadataVersionOrThrow()).build());
         return writer.records();
     }
 
     @Test
     public void testEmpty() {
         assertTrue(FeaturesImage.EMPTY.isEmpty());
-        assertFalse(new FeaturesImage(Collections.singletonMap("foo", (short) 1),
-            FeaturesImage.EMPTY.metadataVersion(), FeaturesImage.EMPTY.zkMigrationState()).isEmpty());
+        assertFalse(new FeaturesImage(Map.of("foo", (short) 1),
+            MetadataVersion.MINIMUM_VERSION).isEmpty());
         assertFalse(new FeaturesImage(FeaturesImage.EMPTY.finalizedVersions(),
-            MetadataVersion.IBP_3_3_IV0, FeaturesImage.EMPTY.zkMigrationState()).isEmpty());
-        assertFalse(new FeaturesImage(FeaturesImage.EMPTY.finalizedVersions(),
-            FeaturesImage.EMPTY.metadataVersion(), ZkMigrationState.MIGRATION).isEmpty());
+            MetadataVersion.MINIMUM_VERSION).isEmpty());
+    }
+
+    @Test
+    public void testElrEnabled() {
+        FeaturesImage image1 = new FeaturesImage(
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_0.featureLevel()),
+            MetadataVersion.latestTesting()
+        );
+        assertFalse(image1.isElrEnabled());
+
+        FeaturesImage image2 = new FeaturesImage(
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_1.featureLevel()),
+            MetadataVersion.latestTesting()
+        );
+        assertTrue(image2.isElrEnabled());
     }
 }
