@@ -20,16 +20,14 @@ package org.apache.kafka.image.node;
 import org.apache.kafka.common.config.ConfigResource;
 import org.apache.kafka.image.ConfigurationImage;
 import org.apache.kafka.image.ConfigurationsImage;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.common.config.ConfigResource.Type.BROKER;
 import static org.apache.kafka.common.config.ConfigResource.Type.TOPIC;
@@ -42,7 +40,7 @@ public class ConfigurationsImageNodeTest {
 
     static {
         Map<ConfigResource, ConfigurationImage> resourceMap = new HashMap<>();
-        for (ConfigResource resource : Arrays.asList(
+        for (ConfigResource resource : List.of(
                 new ConfigResource(BROKER, ""),
                 new ConfigResource(BROKER, "0"),
                 new ConfigResource(TOPIC, ""),
@@ -50,7 +48,7 @@ public class ConfigurationsImageNodeTest {
                 new ConfigResource(TOPIC, ":colons:"),
                 new ConfigResource(TOPIC, "__internal"))) {
             resourceMap.put(resource, new ConfigurationImage(resource,
-                    Collections.singletonMap("foo", "bar")));
+                    Map.of("foo", "bar")));
         }
         ConfigurationsImage image = new ConfigurationsImage(resourceMap);
         NODE = new ConfigurationsImageNode(image);
@@ -60,7 +58,7 @@ public class ConfigurationsImageNodeTest {
     public void testNodeChildNames() {
         List<String> childNames = new ArrayList<>(NODE.childNames());
         childNames.sort(String::compareTo);
-        assertEquals(Arrays.asList(
+        assertEquals(List.of(
             "BROKER",
             "BROKER:0",
             "TOPIC",
@@ -74,8 +72,8 @@ public class ConfigurationsImageNodeTest {
         List<ConfigResource> childResources = NODE.childNames().stream().
             sorted().
             map(ConfigurationsImageNode::resourceFromName).
-            collect(Collectors.toList());
-        assertEquals(Arrays.asList(
+            toList();
+        assertEquals(List.of(
             new ConfigResource(BROKER, ""),
             new ConfigResource(BROKER, "0"),
             new ConfigResource(TOPIC, ""),
