@@ -17,21 +17,22 @@
 
 package org.apache.kafka.image.publisher.metrics;
 
+import org.apache.kafka.common.utils.MockTime;
+import org.apache.kafka.controller.metrics.ControllerMetricsTestUtils;
+
 import com.yammer.metrics.core.Gauge;
 import com.yammer.metrics.core.MetricName;
 import com.yammer.metrics.core.MetricsRegistry;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Optional;
-
-import org.apache.kafka.common.utils.MockTime;
-import org.apache.kafka.controller.metrics.ControllerMetricsTestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -77,13 +78,13 @@ public class SnapshotEmitterMetricsTest {
     public void testMetricNames() {
         try (SnapshotEmitterMetricsTestContext ctx = new SnapshotEmitterMetricsTestContext()) {
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(ctx.registry, "kafka.server:",
-                new HashSet<>(Arrays.asList(
+                new HashSet<>(List.of(
                     "kafka.server:type=SnapshotEmitter,name=LatestSnapshotGeneratedBytes",
                     "kafka.server:type=SnapshotEmitter,name=LatestSnapshotGeneratedAgeMs"
                 )));
             ctx.metrics.close();
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(ctx.registry, "KafkaController",
-                    Collections.emptySet());
+                    Set.of());
         }
     }
 
