@@ -19,13 +19,13 @@ package org.apache.kafka.metadata;
 
 import org.apache.kafka.common.Endpoint;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -57,7 +57,7 @@ public class ListenerInfoTest {
         "example2.com",
         9094);
 
-    private static final List<Endpoint> ALL = Arrays.asList(
+    private static final List<Endpoint> ALL = List.of(
         INTERNAL,
         EXTERNAL,
         SSL,
@@ -65,23 +65,23 @@ public class ListenerInfoTest {
 
     @Test
     public void testNullHostname() {
-        assertNull(ListenerInfo.create(Arrays.asList(INTERNAL)).firstListener().host());
+        assertNull(ListenerInfo.create(List.of(INTERNAL)).firstListener().host());
     }
 
     @Test
     public void testNullHostnameGetsResolved() throws Exception {
-        assertNotNull(ListenerInfo.create(Arrays.asList(INTERNAL)).
+        assertNotNull(ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().firstListener().host());
     }
 
     @Test
     public void testEmptyHostname() {
-        assertEquals("", ListenerInfo.create(Arrays.asList(SSL)).firstListener().host());
+        assertEquals("", ListenerInfo.create(List.of(SSL)).firstListener().host());
     }
 
     @Test
     public void testEmptyHostnameGetsResolved() throws Exception {
-        assertNotEquals("", ListenerInfo.create(Arrays.asList(SSL)).
+        assertNotEquals("", ListenerInfo.create(List.of(SSL)).
                 withWildcardHostnamesResolved().firstListener().host());
     }
 
@@ -118,14 +118,14 @@ public class ListenerInfoTest {
     @Test
     public void testToControllerRegistrationRequestFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toControllerRegistrationRequest());
     }
 
     @Test
     public void testToControllerRegistrationRequestFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toControllerRegistrationRequest());
     }
@@ -143,14 +143,14 @@ public class ListenerInfoTest {
     @Test
     public void testToControllerRegistrationRecordFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toControllerRegistrationRecord());
     }
 
     @Test
     public void testToControllerRegistrationRecordFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toControllerRegistrationRecord());
     }
@@ -168,14 +168,14 @@ public class ListenerInfoTest {
     @Test
     public void testToBrokerRegistrationRequestFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toBrokerRegistrationRequest());
     }
 
     @Test
     public void testToBrokerRegistrationRequestFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toBrokerRegistrationRequest());
     }
@@ -193,21 +193,21 @@ public class ListenerInfoTest {
     @Test
     public void testToBrokerRegistrationRecordFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toBrokerRegistrationRecord());
     }
 
     @Test
     public void testToBrokerRegistrationRecordFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Arrays.asList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toBrokerRegistrationRecord());
     }
 
     @Test
     public void testToString() {
-        ListenerInfo listenerInfo = ListenerInfo.create(Arrays.asList(EXTERNAL, SASL_PLAINTEXT));
+        ListenerInfo listenerInfo = ListenerInfo.create(List.of(EXTERNAL, SASL_PLAINTEXT));
         assertEquals("ListenerInfo(Endpoint(listenerName='EXTERNAL', securityProtocol=SASL_SSL, host='example.com', port=9092), " +
             "Endpoint(listenerName='SASL_PLAINTEXT', securityProtocol=SASL_PLAINTEXT, host='example2.com', port=9094))",
             listenerInfo.toString());
