@@ -21,11 +21,11 @@ import org.apache.kafka.common.Endpoint;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.server.authorizer.Authorizer;
 import org.apache.kafka.server.authorizer.AuthorizerServerInfo;
+
 import org.slf4j.Logger;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -91,7 +91,7 @@ public class EndpointReadyFutures {
             if (authorizer.isPresent()) {
                 return build(authorizer.get().start(info), info);
             } else {
-                return build(Collections.emptyMap(), info);
+                return build(Map.of(), info);
             }
         }
 
@@ -204,7 +204,7 @@ public class EndpointReadyFutures {
                 }
             }));
         });
-        this.futures = Collections.unmodifiableMap(newFutures);
+        this.futures = newFutures;
     }
 
     public Map<Endpoint, CompletableFuture<Void>> futures() {
