@@ -17,22 +17,22 @@
 package org.apache.kafka.server.log.remote.storage;
 
 import org.apache.kafka.common.Uuid;
+
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.substr;
-import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.GROUP_UUID;
 import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.GROUP_PARTITION;
 import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.GROUP_TOPIC;
+import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.GROUP_UUID;
+import static org.apache.kafka.server.log.remote.storage.RemoteTopicPartitionDirectory.substr;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class RemoteTopicPartitionDirectoryTest {
 
     @Test
     public void testSubStr() {
-        List<String> topics = Arrays.asList("abcd", "-abcd-10-", "abcd-0-xyz", "abcd.ef-gh-0", "abcd_10_xyz_0");
+        List<String> topics = List.of("abcd", "-abcd-10-", "abcd-0-xyz", "abcd.ef-gh-0", "abcd_10_xyz_0");
         for (String topic : topics) {
             for (int i = 0; i < 100; i++) {
                 Uuid uuid = Uuid.randomUuid();
