@@ -16,16 +16,9 @@
  */
 package org.apache.kafka.tiered.storage;
 
-import org.apache.kafka.clients.CommonClientConfigs;
-import org.apache.kafka.clients.consumer.Consumer;
-import org.apache.kafka.common.network.ListenerName;
-import org.apache.kafka.common.serialization.StringDeserializer;
-import org.apache.kafka.common.serialization.StringSerializer;
-import org.apache.kafka.tiered.storage.specs.ExpandPartitionCountSpec;
-import org.apache.kafka.tiered.storage.specs.TopicSpec;
-import org.apache.kafka.tiered.storage.utils.BrokerLocalStorage;
-import kafka.log.UnifiedLog;
 import kafka.utils.TestUtils;
+
+import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AlterConfigOp;
 import org.apache.kafka.clients.admin.AlterConfigsOptions;
@@ -33,6 +26,7 @@ import org.apache.kafka.clients.admin.ConfigEntry;
 import org.apache.kafka.clients.admin.NewPartitions;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.admin.TopicDescription;
+import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.producer.KafkaProducer;
@@ -40,20 +34,26 @@ import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.TopicPartitionInfo;
 import org.apache.kafka.common.config.ConfigResource;
+import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.serialization.Deserializer;
 import org.apache.kafka.common.serialization.Serializer;
+import org.apache.kafka.common.serialization.StringDeserializer;
+import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorage;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorageHistory;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorageSnapshot;
-import scala.Function0;
-import scala.Function1;
+import org.apache.kafka.storage.internals.epoch.LeaderEpochFileCache;
+import org.apache.kafka.storage.internals.log.UnifiedLog;
+import org.apache.kafka.tiered.storage.specs.ExpandPartitionCountSpec;
+import org.apache.kafka.tiered.storage.specs.TopicSpec;
+import org.apache.kafka.tiered.storage.utils.BrokerLocalStorage;
 
+import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -64,8 +64,10 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
+import scala.Function0;
+import scala.Function1;
 import scala.Option;
-import scala.collection.JavaConverters;
+import scala.jdk.javaapi.CollectionConverters;
 
 import static org.apache.kafka.clients.producer.ProducerConfig.LINGER_MS_CONFIG;
 
@@ -90,7 +92,6 @@ public final class TieredStorageTestContext implements AutoCloseable {
         initContext();
     }
 
-    @SuppressWarnings("deprecation")
     private void initClients() {
         // rediscover the new bootstrap-server port incase of broker restarts
         ListenerName listenerName = harness.listenerName();
@@ -105,7 +106,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
 
         producer = harness.createProducer(ser, ser, producerOverrideProps);
         consumer = harness.createConsumer(de, de, commonOverrideProps,
-                JavaConverters.asScalaBuffer(Collections.<String>emptyList()).toList());
+                CollectionConverters.asScala(List.<String>of()).toList());
         admin = harness.createAdminClient(listenerName, commonOverrideProps);
     }
 
@@ -123,7 +124,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
             newTopic = new NewTopic(spec.getTopicName(), replicasAssignments);
         }
         newTopic.configs(spec.getProperties());
-        admin.createTopics(Collections.singletonList(newTopic)).all().get();
+        admin.createTopics(List.of(newTopic)).all().get();
         TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.getTopicName(), spec.getPartitionCount());
         synchronized (this) {
             topicSpecs.put(spec.getTopicName(), spec);
@@ -139,10 +140,10 @@ public final class TieredStorageTestContext implements AutoCloseable {
             List<List<Integer>> newAssignments = assignment.entrySet().stream()
                     .sorted(Map.Entry.comparingByKey())
                     .map(Map.Entry::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
             newPartitions = NewPartitions.increaseTo(spec.getPartitionCount(), newAssignments);
         }
-        Map<String, NewPartitions> partitionsMap = Collections.singletonMap(spec.getTopicName(), newPartitions);
+        Map<String, NewPartitions> partitionsMap = Map.of(spec.getTopicName(), newPartitions);
         admin.createPartitions(partitionsMap).all().get();
         TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.getTopicName(), spec.getPartitionCount());
     }
@@ -174,7 +175,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
                 alterEntries.add(new AlterConfigOp(new ConfigEntry(k, v), AlterConfigOp.OpType.SET)));
         AlterConfigsOptions alterOptions = new AlterConfigsOptions().timeoutMs(30000);
         Map<ConfigResource, Collection<AlterConfigOp>> configsMap =
-                Collections.singletonMap(configResource, alterEntries);
+                Map.of(configResource, alterEntries);
         admin.incrementalAlterConfigs(configsMap, alterOptions).all().get(30, TimeUnit.SECONDS);
     }
 
@@ -203,10 +204,11 @@ public final class TieredStorageTestContext implements AutoCloseable {
     public List<ConsumerRecord<String, String>> consume(TopicPartition topicPartition,
                                                         Integer expectedTotalCount,
                                                         Long fetchOffset) {
-        consumer.assign(Collections.singletonList(topicPartition));
+        consumer.assign(List.of(topicPartition));
         consumer.seek(topicPartition, fetchOffset);
 
         long timeoutMs = 60_000L;
+        long pollTimeoutMs = 100L;
         String sep = System.lineSeparator();
         List<ConsumerRecord<String, String>> records = new ArrayList<>();
         Function1<ConsumerRecords<String, String>, Object> pollAction = polledRecords -> {
@@ -216,20 +218,20 @@ public final class TieredStorageTestContext implements AutoCloseable {
         Function0<String> messageSupplier = () ->
                 String.format("Could not consume %d records of %s from offset %d in %d ms. %d message(s) consumed:%s%s",
                         expectedTotalCount, topicPartition, fetchOffset, timeoutMs, records.size(), sep,
-                        Utils.join(records, sep));
-        TestUtils.pollRecordsUntilTrue(consumer, pollAction, messageSupplier, timeoutMs);
+                        records.stream().map(Object::toString).collect(Collectors.joining(sep)));
+        TestUtils.pollRecordsUntilTrue(consumer, pollAction, messageSupplier, timeoutMs, pollTimeoutMs);
         return records;
     }
 
     public Long nextOffset(TopicPartition topicPartition) {
-        List<TopicPartition> partitions = Collections.singletonList(topicPartition);
+        List<TopicPartition> partitions = List.of(topicPartition);
         consumer.assign(partitions);
         consumer.seekToEnd(partitions);
         return consumer.position(topicPartition);
     }
 
     public Long beginOffset(TopicPartition topicPartition) {
-        List<TopicPartition> partitions = Collections.singletonList(topicPartition);
+        List<TopicPartition> partitions = List.of(topicPartition);
         consumer.assign(partitions);
         consumer.seekToBeginning(partitions);
         return consumer.position(topicPartition);
@@ -259,8 +261,20 @@ public final class TieredStorageTestContext implements AutoCloseable {
         initContext();
     }
 
-    public void eraseBrokerStorage(int brokerId) throws IOException {
-        localStorages.get(brokerId).eraseStorage();
+    public void eraseBrokerStorage(int brokerId,
+                                   FilenameFilter filter,
+                                   boolean isStopped) throws IOException {
+        BrokerLocalStorage brokerLocalStorage;
+        if (isStopped) {
+            brokerLocalStorage = TieredStorageTestHarness.localStorages(harness.brokers())
+                    .stream()
+                    .filter(bls -> bls.getBrokerId() == brokerId)
+                    .findFirst()
+                    .orElseThrow(() -> new IllegalArgumentException("No local storage found for broker " + brokerId));
+        } else {
+            brokerLocalStorage = localStorages.get(brokerId);
+        }
+        brokerLocalStorage.eraseStorage(filter);
     }
 
     public TopicSpec topicSpec(String topicName) {
@@ -283,6 +297,11 @@ public final class TieredStorageTestContext implements AutoCloseable {
                 .filter(rsm -> rsm.brokerId() == brokerId)
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException("No remote storage manager found for broker " + brokerId));
+    }
+
+    // unused now, but it can be reused later as this is an utility method.
+    public Optional<LeaderEpochFileCache> leaderEpochFileCache(int brokerId, TopicPartition partition) {
+        return log(brokerId, partition).map(UnifiedLog::leaderEpochCache);
     }
 
     public List<LocalTieredStorage> remoteStorageManagers() {
@@ -309,7 +328,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
             throws ExecutionException, InterruptedException {
         String topic = topicPartition.topic();
         int partition = topicPartition.partition();
-        TopicDescription description = admin.describeTopics(Collections.singletonList(topicPartition.topic()))
+        TopicDescription description = admin.describeTopics(List.of(topicPartition.topic()))
                 .allTopicNames().get().get(topic);
         TopicPartitionInfo partitionInfo = description.partitions().get(partition);
         return partitionInfo.replicas().stream().anyMatch(node -> node.id() == replicaId);
