@@ -16,22 +16,20 @@
  */
 package org.apache.kafka.tiered.storage.actions;
 
+import org.apache.kafka.clients.admin.RecordsToDelete;
+import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorage;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorageCondition;
 import org.apache.kafka.tiered.storage.TieredStorageTestAction;
 import org.apache.kafka.tiered.storage.TieredStorageTestContext;
-import org.apache.kafka.clients.admin.RecordsToDelete;
-import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.tiered.storage.specs.RemoteDeleteSegmentSpec;
 
 import java.io.PrintStream;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.server.log.remote.storage.LocalTieredStorageCondition.expectEvent;
 import static org.apache.kafka.server.log.remote.storage.LocalTieredStorageEvent.EventType.DELETE_SEGMENT;
@@ -64,10 +62,10 @@ public final class DeleteRecordsAction implements TieredStorageTestAction {
                         spec.getTopicPartition(),
                         false,
                         spec.getEventCount()))
-                .collect(Collectors.toList());
+                .toList();
 
         Map<TopicPartition, RecordsToDelete> recordsToDeleteMap =
-                Collections.singletonMap(partition, RecordsToDelete.beforeOffset(beforeOffset));
+                Map.of(partition, RecordsToDelete.beforeOffset(beforeOffset));
         context.admin().deleteRecords(recordsToDeleteMap).all().get();
 
         if (!tieredStorageConditions.isEmpty()) {
