@@ -16,22 +16,20 @@
  */
 package org.apache.kafka.tiered.storage.actions;
 
-import org.apache.kafka.tiered.storage.TieredStorageTestAction;
-import org.apache.kafka.tiered.storage.TieredStorageTestContext;
 import org.apache.kafka.clients.admin.NewPartitionReassignment;
 import org.apache.kafka.clients.admin.TopicDescription;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.test.TestUtils;
+import org.apache.kafka.tiered.storage.TieredStorageTestAction;
+import org.apache.kafka.tiered.storage.TieredStorageTestContext;
 
 import java.io.PrintStream;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.tiered.storage.utils.TieredStorageTestUtils.describeTopic;
 
@@ -51,7 +49,7 @@ public final class ReassignReplicaAction implements TieredStorageTestAction {
         String topic = topicPartition.topic();
         int partition = topicPartition.partition();
         Map<TopicPartition, Optional<NewPartitionReassignment>> proposed =
-                Collections.singletonMap(topicPartition, Optional.of(new NewPartitionReassignment(replicaIds)));
+                Map.of(topicPartition, Optional.of(new NewPartitionReassignment(replicaIds)));
         context.admin().alterPartitionReassignments(proposed);
 
         TestUtils.waitForCondition(() -> {
@@ -60,7 +58,7 @@ public final class ReassignReplicaAction implements TieredStorageTestAction {
                 List<Integer> actualReplicaIds = description.partitions().get(partition).replicas()
                         .stream()
                         .map(Node::id)
-                        .collect(Collectors.toList());
+                        .toList();
                 return replicaIds.equals(actualReplicaIds);
             } catch (ExecutionException e) {
                 if (e.getCause() instanceof UnknownTopicOrPartitionException) {
